--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1>Lernantino</h1>
 		<nav>
 		  <ul>
-			<li><a href="#">About Me</a></li>
+			<li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">About Me</a></li>
 			<li><a href="#">Work</a></li>
 			<li><a href="#">Contact Me</a></li>
 			<li><a href="#">Resume</a></li>
